# rl-market-making-lob

./: CRYPTO_INTEGRATION.md  MERGE_SUMMARY.md  README.md  SUMMARY.md  UV_GUIDE.md  crypto_data_pipeline.py  crypto_features.py  data_prep.ipynb  example_tardis_download.py  feature_engineering.ipynb  main_code.py  pyproject.toml  run_crypto_backtest.py  tardis_data.py  test_crypto_data.py
crypto_backtest_results/: backtest_stats.csv
crypto_data/: sample_orderbook.csv  scaled_data.csv  strategy_data.csv
