[project]
name = "crypto-market-making"
version = "1.0.0"
description = "Reinforcement Learning for Cryptocurrency Market Making"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Market Making Team"},
]
keywords = ["reinforcement-learning", "market-making", "cryptocurrency", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "gymnasium>=1.2.0",
    "scikit-learn>=1.7.0",
    "scikit-optimize>=0.10.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "notebook>=7.0.0",
]

all = [
    "crypto-market-making[dev,notebook]",
]

[project.scripts]
crypto-test = "test_crypto_data:main"
crypto-backtest = "run_crypto_backtest:main"
crypto-download = "example_tardis_download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
